# rhythmplayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  test.sh
assets/test/maps/4key/: 4key.osu
assets/test/maps/7key/: 7key.osu
src/: main.cpp
src/game/: game.h  scene.h
src/map/: map.cpp  map.h
src/map/osumap/: colours.cpp  colours.h  events.cpp  events.h  hitobjects.cpp  hitobjects.h  maniawrapper.cpp  maniawrapper.h  osumap.cpp  osumap.h  sections.cpp  sections.h  timingpoints.cpp  timingpoints.h
src/parse/: osuparser.cpp  osuparser.h  parser.cpp  parser.h
tests/: test_osuwrapper.cpp
